--- a/client/Views/App/mainLayout.html
+++ b/client/Views/App/mainLayout.html
@@ -15,17 +15,8 @@
                 </div>
             </section> <!-- #header -->
             <section id="refine_menu">
-                <div class="col-xs-12">
-                    <ul class="refine_menu list-inline">
-                        <li class="active">
-                            <a href="#" id="makeup">Makeup <i class="fa fa-caret-down"></i></a>
-                        </li>
-                        <li class="active">
-                            <a href="#" id="makeup"></a>
-                        </li>
-                    </ul>
-                </div>
-            </section>  
+                {{> menu}}
+            </section> <!-- #refine menu -->
             {{> yield }}
             {{> footer}}
         </section>
