--- a/client/Views/App/login/email.html
+++ b/client/Views/App/login/email.html
@@ -3,13 +3,13 @@
 	<div class="container">
 		<form role="form">
 			<div class="form-group" style="margin-bottom:20px;" id="email">
-				<label>Enter your email</label>
+				<label>{{_"Enter Your Email"}}</label>
 				<input class="form-control" type="text" name="email" required>
 			</div>
 			
 			<div class="form-group" style="margin-bottom:20px;">
 				
-				<input type="submit" class="btn btn-primary" style="padding:0px 15px; border-radius:3px; margin:0px;" value="Submit">
+				<input type="submit" class="btn btn-primary" style="padding:0px 15px; border-radius:3px; margin:0px;" value="{{_ "Submit"}}">
 			</div>
 		</form>
 		
