--- a/client/Views/App/login/forgetpassword.html
+++ b/client/Views/App/login/forgetpassword.html
@@ -16,7 +16,7 @@
             </div> -->
             <div class="form-group" style="margin-bottom:20px;">
                         
-                <input type="submit" class="btn btn-primary" style="padding:0px 15px; border-radius:3px; margin:0px;" value="Send">
+                <input type="submit" class="btn btn-primary" style="padding:0px 15px; border-radius:3px; margin:0px;" value="{{_ "Send"}}">
             </div>
                     
         </form>
