--- a/client/Views/App/login/resetpassword.html
+++ b/client/Views/App/login/resetpassword.html
@@ -8,7 +8,7 @@
             </div>
             <div class="form-group" style="margin-bottom:20px;">
                         
-                <input type="submit" class="btn btn-primary" style="padding:0px 15px; border-radius:3px; margin:0px;" value="Reset">
+                <input type="submit" class="btn btn-primary" style="padding:0px 15px; border-radius:3px; margin:0px;" value="{{_ "Reset"}}">
             </div>
         </form>
     </div>
