--- a/client/Views/App/Reward/reward.html
+++ b/client/Views/App/Reward/reward.html
@@ -5,13 +5,13 @@
 				<div class="row">
 					<div class="text-right">{{getpoint}} pt</div>
 				<div class="col-xs-12">
-					<h4 class="text-center">REWARDS / HOW TO EARN MORE POINTS</h4>
+					<h4 class="text-center">{{_"REWARDS / HOW TO EARN MORE POINTS"}}</h4>
 				</div>
 			    </div>
 			</div>
 			<div class="row">
 				<div class="bg_title">
-					<h4 class="small_reward text-right">REWARDS</h4>
+					<h4 class="small_reward text-right">{{_"REWARDS"}}</h4>
 				</div>
 			</div>
 			
@@ -37,7 +37,7 @@
 			
 			<div class="row">
 				<div class="bg_title">
-					<h4 class="small_reward text-right">HOW TO EARN MORE POINTS</h4>
+					<h4 class="small_reward text-right">{{_"HOW TO EARN MORE POINTS"}}</h4>
 				</div>
 			</div>
 			
