transalte home & category and link to detail page

--- a/client/Views/App/product/listproducts.html
+++ b/client/Views/App/product/listproducts.html
@@ -5,9 +5,9 @@
 
             <a href="#" id="bestSelling" style="color:black;"><span class="glyphicon glyphicon-play" aria-hidden="true">{{_ "Best selling"}}</span></a>
 
-            <a href="#" class="text-selling-second" id="name" style="color:black;">&nbsp; {{_ "Sort Name"}} <span class="glyphicon glyphicon-play" aria-hidden="true"></span></a>
+            <a href="#" id="name" style="color:black;"><span class="glyphicon glyphicon-play" aria-hidden="true">{{_ "Sort Name"}} </span></a>
 
-            <a href="#" class="text-selling-second" id="price" style="color:black;">&nbsp; {{_ "Sort Price"}}<span class="glyphicon glyphicon-play" aria-hidden="true"></span></a>
+            <a href="#" id="price" style="color:black;"><span class="glyphicon glyphicon-play" aria-hidden="true">{{_ "Sort Price"}}</span></a>
 
             <div class="row">
                     {{#each products}}
