translate login register and forget password

--- a/client/Views/App/login/register.html
+++ b/client/Views/App/login/register.html
@@ -49,10 +49,12 @@
 	                            <div class="control-group" action="demo_form.asp">
 	                                <label class="control-label" for="inputEmail">{{_ "Email"}}</label>
 	                                <div class="controls">
-	                                    <input type="text" id="email"  name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
+	                                    <input type="text" id="email"  name="email">
 
 	                                </div>
 	                                <p class="error_email" style="margin-top:10px;color:red"></p>
+	                                <p class="msg error" style="margin-top:10px;color:red"></p>
+	                                <p class="msg success" style="margin-top:10px;color:red"></p>
 	                            </div>
 	                            <div class="control-group">
 	                                <label class="control-label" for="inputPassword">{{_ "Password"}}</label>
