--- a/client/Views/App/mainLayout.html
+++ b/client/Views/App/mainLayout.html
@@ -1,6 +1,6 @@
 <template name="mainLayoutMobile">
     <section id="page-wrapper">
-        {{> headerMo}}
+        {{> headermenu}}
         <section id="content-wrapper">
             <section id="header">
                 <div id="header-left">
@@ -8,24 +8,15 @@
                     <a href="#" id="a-shoping"><img src="/img/icons/shoping-01.png" alt="menu" /></a>
                 </div>
                 <div id="header-title">
-                    <h1><img src="/img/icons/logo-01.png" /></h1>
+                    <a href="/"><h1><img src="/img/icons/logo-01.png" /></h1></a>
                 </div>
                 <div id="header-right">
                     <a href="#" id="a-sidebar">REFINE</a>
                 </div>
             </section> <!-- #header -->
             <section id="refine_menu">
-                <div class="col-xs-12">
-                    <ul class="refine_menu list-inline">
-                        <li class="active">
-                            <a href="#" id="makeup">Makeup <i class="fa fa-caret-down"></i></a>
-                        </li>
-                        <li class="active">
-                            <a href="#" id="makeup"></a>
-                        </li>
-                    </ul>
-                </div>
-            </section>  
+                {{> menu}}
+            </section> <!-- #refine menu -->
             {{> yield }}
             {{> footer}}
         </section>
