--- a/public/css/style.css
+++ b/public/css/style.css
@@ -260,8 +260,8 @@ table.contact
 {
 	display: block;
 	padding: 6px 12px;	
-	background: #fffff;
-	color: black;
+	background: #eb866a;
+	color: #fff;
 }
 
  .menu-li-title, #footer
