--- a/client/Views/App/Member-shipcard/member.html
+++ b/client/Views/App/Member-shipcard/member.html
@@ -4,7 +4,7 @@
 			<div class="wrapper">
 				<div class="row">
 					<div class="col-xs-12">
-						<h2 class="text-right">{{_"BLACK MEMBER"}}</h2>
+						<h2 class="text-right">BLACK MEMBER {{getPourcentage}}</h2>
 					</div>
 				</div>
 				<div class="row">
