--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -7,7 +7,7 @@
                     <h3 class="pull-right">{{title}}</h3>
                   </div>
                   <div class="test_color">
-                   <!--  <div class="choose_color">COLOR</div>
+                    <!-- <div class="choose_color">COLOR</div>
                     <div>SIZE</div> -->
                     <a id="show_image">Show Image</a>
                           <p id="my_images" style="display:none;">
@@ -77,54 +77,55 @@
            </section>
            <section id="produst_listing" class="shadow_bottom" dir="{{getDirection}}">
             <div class="wrapper">
-                <div class="row" id="article">
-                   <!-- <div class="pull-right">
-                       <img src="/img/filter-img.png" class="img-responsive space-top-img1">
-                   </div> -->
+                <!-- <div class="row" id="article">
                    <div class="col-sm-12">
                       <div class="col-md-6 pull-left space-top-detail2">
-                       <!-- <img src="/img/sm-girl.png" class="img-responsive"> -->
+                       
                        <img src="{{getImg currentUser.image}}" class="img-responsive center-block" style="width: 50%;">
                       </div>
                        <div class="col-md-6 pull-left space-top-detail2">
                          <h4>{{#with getprofile}}{{profile.firstname}} {{profile.lastname}}{{/with}}</h4>
 
-                         <p class="no-margin"> <!-- {{{getTagList _id}}} --></p>
-                         <p class="no-margin">{{review.date}}</p>
+                         <p class="no-margin"></p>
+                         <p class="no-margin">{{date}}</p>
                       </div>
                    </div>
-                </div>
+                </div> -->
                 {{#if currentUser}}
                     <div class="col-sm-12">
                       <div class="space-comment">
-                         <textarea class="form-control" id="status" name="styled-textarea" rows="7" value="{{_ "Write what you want"}}"></textarea>
+                         <textarea class="form-control" id="review" name="styled-textarea" rows="7" placeholder="Write what you want ..."></textarea>
                        </div>
-                       <button class="btn_register pull-right" id="posting">{{_ "SEND"}}</button>
+                       <button class="btn_register pull-right" id="addreview">{{_ " SEND"}}</button>
                       
                     </div>
                 {{/if}}
-                <!-- <div class="clear-fix"></div> -->
+                <div class="clear-fix"></div>
                  {{#each getReviews review filterReview removeFilter}}
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="col-sm-5 pull-left space-top-detail2">
-                                <img src="img/sm-girl.png" class="img-responsive">
+                                <!-- <img src="img/sm-girl.png" class="img-responsive"> -->
+                                <img src="{{getImg currentUser.image}}" class="img-responsive center-block" style="width: 50%;">
                             </div>
                             <div class="col-sm-5 pull-left space-top-detail2">
-                                <h4>Sarah</h4>
-                                <p class="no-margin">07-20-2015</p>
-                                <p class="no-margin">DATE={{review.date}}</p>
+                                <h4>{{#with getprofile}}{{profile.firstname}} {{profile.lastname}}{{/with}}</h4>
+                                <!-- <p class="no-margin">07-20-2015</p> -->
+                                <p class="no-margin">{{getDate date}}</p>
+                                <p>{{getTime date}}</p>
                             </div>
                             <div class="col-sm-2 pull-right space-top-detail2">
                                 <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp;19</h3> 
                             </div>
                             <div class="col-sm-12">
-                                <p class="pull-left space-top-detail3">COMMENT={{comment}}</p>
+                                <p class="pull-left space-top-detail3">{{comment}}</p>
                                 <div class="pull-left border-detail"></div>
                             </div>
                         </div>  
                     </div>
-                 {{/each}}
+                 {{/each}} 
+               
+               
             </div>
        </section>
    </article>
