--- a/public/css/login.css
+++ b/public/css/login.css
@@ -21,7 +21,7 @@
 }
 .btn{
     display: inline-block;
-    padding: 6px 25px;
+    padding: 6px 20px;
     margin-bottom: 0px;
     font-size: 18px;
     font-weight: normal;
@@ -39,7 +39,7 @@ button.btn-red{
     border: medium none;
     font-size: 20px !important;
 }
-button {
+/*button {
     border: medium none;
     font-size: 20px !important;
     padding: 6px 20px;
@@ -47,6 +47,33 @@ button {
     background-color: #000;
     color: #FFF;
     margin-bottom: 15px;
+}*/
+.btn-re-log{
+    padding-top: 15px;
+    margin: 0 auto;
+}
+.btn-register{
+    background:#000;
+    color:#fff;
+    font-size: 16px !important;
+}
+.btn-register-white{
+    background:#fff;
+    color:#000;
+    font-size: 16px !important;
+}
+.btn-log{
+    background:#000;
+    color:#fff;
+    font-size: 16px !important;
+}
+.btn-log-white{
+    background:#fff;
+    color:#000;
+    font-size: 16px !important;
+}
+.or{
+    color:#000; font-size: 16px !important;
 }
 .button-log{
     border: medium none;
