--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -81,11 +81,11 @@
 					<span class="menu-li-title">TUTO</span>
 				</a>
 			</li>
-			<li class="icon info">
+			<!-- <li class="icon info">
 				<a href="/look">
 					<span class="menu-li-title">LOOKS</span>
 				</a>
-			</li>
+			</li> -->
 			<li class="icon info">
 				<a href="/forum/listing">
 					<span class="menu-li-title">FORUM</span>
