--- a/public/css/custom_layout.css
+++ b/public/css/custom_layout.css
@@ -2,9 +2,6 @@
     outline: 0;
     outline-offset: -2px;
 }
-.nonelike{
-    display: none;
-}
 #a-sidebar {
     width: 60px;
     height: 30px;
@@ -99,7 +96,7 @@ h3.price a:hover span{
     text-transform: uppercase;
     color: #888;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 14px;
     text-decoration: none;      
 }
 
@@ -107,7 +104,7 @@ h3.price a:hover span{
     text-transform: uppercase;
     color: #29abe2;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 14px;
     text-decoration: none;
     outline: 0;     
 }
@@ -116,7 +113,7 @@ h3.price a:hover span{
     text-transform: uppercase;
     color: #29abe2;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 14px;
     text-decoration: none;      
 }
 
@@ -224,9 +221,8 @@ ul.sub_dropdown{
                 outline: 0; 
             }
 .panel_price_range{
-
     display: none;
-    padding: 15px 25px 0px 25px;
+    padding: 0px 25px 0px 25px;
 }
 
 .price span.red{
@@ -238,11 +234,11 @@ ul.sub_dropdown{
     overflow: hidden;
     z-index: 1;
 }
-.panel_brands a.alphabet{
+.panel_brands h1 a{
     color: #fff;
     text-decoration: none;
 }
-.panel_brands  a.alphabet:hover{
+.panel_brands h1 a:hover{
     color: #fff;
     text-decoration: none;
 }
@@ -265,5 +261,9 @@ ul.sub_dropdown{
     text-transform: uppercase;
     font-weight: bold;
 
+}
+.panel_price_range .checkbox input[type="checkbox"]{
+    float: left;
+   
 }
 
