--- a/client/Views/App/menu.html
+++ b/client/Views/App/menu.html
@@ -18,7 +18,7 @@
 	                <li id="child_makeup"><a href="">{{title}}</a>
 		                <ul>
 		                	{{#each getChildren _id}}
-		                	<li id="child"><a href="">child {{title}}</a></li>
+		                	<li id="child"><a href="{{pathFor 'listing' id=(slug title)}}">child {{title}}</a></li>
 		                	{{/each}}
 		                </ul>
 	                </li>
