--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -4,7 +4,7 @@
 			<input id="menu-search-input-text" type="text" placeholder="Search..." />
 		</div> -->
 		<div id="menu-search">
-		   	<span class="icon-search"><i class="fa fa-search search-font"></i></span>
+		   	<span class="icon-search search-btn kesearch"><i class="fa fa-search search-font"></i></span>
 		   	<input class="input-search" id="textToSearch" type="text" placeholder="{{_"Search for..."}}" />
 		</div>
 		<ul id="menu-lateral" class="menu">
@@ -81,11 +81,11 @@
 					<span class="menu-li-title">TUTO</span>
 				</a>
 			</li>
-			<!-- <li class="icon info">
+			<li class="icon info">
 				<a href="/look">
 					<span class="menu-li-title">LOOKS</span>
 				</a>
-			</li> -->
+			</li>
 			<li class="icon info">
 				<a href="/forum/listing">
 					<span class="menu-li-title">FORUM</span>
