--- a/public/css/lift.css
+++ b/public/css/lift.css
@@ -2,14 +2,8 @@
     width: 100%;
 }
 .thumbnail {
-    display: block;
-    padding: 4px;
-    margin-bottom: 20px;
-    line-height: 1.42857;
-    background-color: #FFF;
-    border-radius: 50%;
-    transition: all 0.2s ease-in-out 0s;
-    border: 5px solid #000;
+
+     border: none;
 }
 .img-heart {
     vertical-align: middle;
