--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -1,132 +1,198 @@
 <template name="details">
-	<article>
-          <section class="shadow_bottom" dir="{{getDirection}}">
-            <div class="wrapper">
-                <div class="row">
-                  <div class="col-sm-12">
-                    <h3 class="pull-right">{{title}}</h3>
-                  </div>
-                  <div class="test_color">
-                    <!-- <div class="choose_color">COLOR</div>
-                    <div>SIZE</div> -->
-                    <a id="show_image">Show Image</a>
-                          <p id="my_images" style="display:none;">
-                          {{#each getParentAttr oldId}}
-                      {{#with getParentDetails parent}}
-                      {{name}} :
-
-                      <div id="gallerycontainer">
-                        <div id="gallery" >
-                          {{#each getAllAttributes ../product _id}}
-                          <p style="margin:17px;"><a href=""><img src="{{getImg productImage}}" id="img_attr"
-                            class="img-responsive pull-left" width="50px" height="50px" alt="{{title}}"></a></p>
-                            {{else}}
-                            <p><i>{{_ "None"}}</i></p>
-
-                            {{/each}}
+    <article>
+    <section class="shadow_bottom">
+        <div class="wrapper">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h3>{{title}}</h3>
+                </div>
+                {{#each getParentAttr oldId}}
+                    {{#with getParentDetails parent}}
+                    <div class="main_color">
+                        <div>
+                            <p class="toggle">{{name}} :</p>
+                            <div style="display: none;" class="bg-white">
+                              <ul class="list-inline">
+                              {{#each getAllAttributes ../product _id}}
+                                    <li><a href="" ><img src="{{getImg productImage}}" width="70" height="70" id="img_attr"></a></li>
+                                {{/each}}
+                              </ul>
+                            </div>
+                        </div>
+                    </div>
+                 {{/with}}
+                  {{/each}}
+                          <div class="space-top-detail1">
+                              <!-- <img src="img/cream.png" class="img-responsive"> -->
+                              <!-- <span class='zoom' id='ex1'> -->
+                                <img id="hoverZoom" class="img-responsive" src="{{getImgForProduct _id}}" alt="{{title}}"/>
+                                <!-- </span> -->
+                          </div>
+                          <div class="col-sm-12">
+                            <button class="btn_addtocard pull-left" id="addtocart">{{_ "ADD TO CART"}}</button>
+                            <h2 class="pull-right">{{selected_price}} تومان</h2>
                           </div>
                         </div>
-                        {{/with}}
-                        {{/each}}
-                      </p>
-                        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-                        <script>
-                           $(document).ready(function(){
-                              $('#show_image').on("click", function(){
-                                 $('#my_images').toggle();
-                              });
-                           });
-                        </script>
-                         <!-- <p>{{#each getParentAttr oldId}}
-                      {{#with getParentDetails parent}}
-                      {{name}} :
 
-                      <div id="gallerycontainer">
-                        <div id="gallery" >
-                          {{#each getAllAttributes ../product _id}}
-                          <p style="margin:17px;"><a href=""><img src="{{getImg productImage}}" id="img_attr"
-                            class="img-responsive pull-left" width="50px" height="50px" alt="{{title}}"></a></p>
-                            {{else}}
-                            <p><i>{{_ "None"}}</i></p>
-
-                            {{/each}}
-                          </div>
+                        <div class="row">
+                         <div class="col-sm-12">
+                           <div class="well-deatail">
+                                <p class="text-center text-detail">{{{description}}}</p>
+                            </div>
+                         </div>
                         </div>
-                        {{/with}}
-                        {{/each}}
-                      </p> -->
                     </div>
-                  </div>
-                  <div class="space-top-detail1">
-                      <!-- <img src="img/cream.png" class="img-responsive"> -->
-                      <img id="hoverZoom" class="img-responsive" src="{{getImgForProduct _id}}" alt="{{title}}"/>	
-                  </div>
-                  <div class="col-sm-12">
-                    <button class="btn_addtocard pull-left" id="addtocart">{{_ "ADD TO CART"}}</button>
-                    <h2 class="pull-right">{{selected_price}}</h2>
-                  </div>
-                </div>
-                <div class="row">
-                 <div class="col-sm-12">
-                   <div class="well-deatail">
-                        <p class="text-center text-detail">{{description}}</p>
-                    </div>
-                 </div>
-                </div>
-          
-           </section>
-           <section id="produst_listing" class="shadow_bottom" dir="{{getDirection}}">
-            <div class="wrapper">
-                <!-- <div class="row" id="article">
-                   <div class="col-sm-12">
-                      <div class="col-md-6 pull-left space-top-detail2">
-                       
-                       <img src="{{getImg currentUser.image}}" class="img-responsive center-block" style="width: 50%;">
-                      </div>
-                       <div class="col-md-6 pull-left space-top-detail2">
-                         <h4>{{#with getprofile}}{{profile.firstname}} {{profile.lastname}}{{/with}}</h4>
-
-                         <p class="no-margin"></p>
-                         <p class="no-margin">{{date}}</p>
-                      </div>
-                   </div>
-                </div> -->
-                {{#if currentUser}}
-                    <div class="col-sm-12">
-                      <div class="space-comment">
-                         <textarea class="form-control" id="review" name="styled-textarea" rows="7" placeholder="Write what you want ..."></textarea>
-                       </div>
-                       <button class="btn_register pull-right" id="addreview">{{_ " SEND"}}</button>
-                      
-                    </div>
-                {{/if}}
-                <div class="clear-fix"></div>
-                 {{#each getReviews review filterReview removeFilter}}
-                    <div class="row">
+                   </section>
+                   <section class="shadow_bottom">
+                    <div class="wrapper">
+                        <!-- <div class="row">
+                           <div class="pull-right">
+                               <img src="img/filter-img.png" class="img-responsive space-top-img1">
+                           </div>
+                           <div class="col-sm-12">
+                              <div class="col-md-6 pull-left space-top-detail2">
+                               <img src="img/sm-girl.png" class="img-responsive">
+                              </div>
+                               <div class="col-md-6 pull-left space-top-detail2">
+                                 <h4>Sarah</h4>
+                                 <p class="no-margin">07-20-2015</p>
+                                 <p class="no-margin">11:16</p>
+                              </div>
+                           </div>
+                        </div> -->
+                     {{#if currentUser}}
                         <div class="col-sm-12">
-                            <div class="col-sm-5 pull-left space-top-detail2">
-                                <!-- <img src="img/sm-girl.png" class="img-responsive"> -->
-                                <img src="{{getImg currentUser.image}}" class="img-responsive center-block" style="width: 50%;">
+                          <div class="space-comment box">
+                             <textarea class="form-control" id="status" name="styled-textarea" onfocus="this.value=''; setbg('#ccc');" onblur="setbg('white')" rows="7">{{_"Write what you want ..."}}</textarea>
+                           </div>
+                           <button class="btn_register pull-right" id="posting">{{_ "SEND"}}</button>
+                        </div>
+                     {{/if}}
+                        <div class="clear-fix"></div>
+                          {{#each getReviews review filterReview removeFilter}}
+                        <div class="row">
+                           <div class="col-sm-12">
+                              <div class="col-sm-5 pull-left space-top-detail2">
+                               <img src="{{getImg currentUser.image}}" class="img-responsive center-block" style="width: 50%;">
+                               <!-- <img src="img/sm-girl.png" class="img-responsive"> -->
+                              </div>
+                               <div class="col-sm-5 pull-left space-top-detail2">
+                                 <h4>{{#with getprofile}}{{profile.firstname}} {{profile.lastname}}{{/with}}</h4>
+                                 <p class="no-margin">{{getDate date}}</p>
+                                 <p class="no-margin">{{getTime date}}</p>
+                              </div>
+                              <div class="col-sm-2 pull-right space-top-detail2">
+                               <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp;19</h3> 
+                              </div>
+                              <div class="col-sm-12">
+                                 <p class="pull-left space-top-detail3">{{comment}}</p>
+                                 <div class="pull-left border-detail">   
+                                 </div>
+                              </div>
+                           </div>  
+                        </div>
+                        {{/each}} 
+                        </div>
+                   </section>
+                </article>
+
+</template>
+<template name="details">
+    <article>
+    <section class="shadow_bottom">
+        <div class="wrapper">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h3>{{title}}</h3>
+                </div>
+                {{#each getParentAttr oldId}}
+                    {{#with getParentDetails parent}}
+                    <div class="main_color">
+                        <div>
+                            <p class="toggle">{{name}} :</p>
+                            <div style="display: none;" class="bg-white">
+                              <ul class="list-inline">
+                              {{#each getAllAttributes ../product _id}}
+                                    <li><a href="" ><img src="{{getImg productImage}}" width="70" height="70" id="img_attr"></a></li>
+                                {{/each}}
+                              </ul>
                             </div>
-                            <div class="col-sm-5 pull-left space-top-detail2">
-                                <h4>{{#with getprofile}}{{profile.firstname}} {{profile.lastname}}{{/with}}</h4>
-                                <!-- <p class="no-margin">07-20-2015</p> -->
-                                <p class="no-margin">{{getDate date}}</p>
-                                <p>{{getTime date}}</p>
-                            </div>
-                            <div class="col-sm-2 pull-right space-top-detail2">
-                                <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp;19</h3> 
-                            </div>
-                            <div class="col-sm-12">
-                                <p class="pull-left space-top-detail3">{{comment}}</p>
-                                <div class="pull-left border-detail"></div>
-                            </div>
-                        </div>  
+                        </div>
                     </div>
-                 {{/each}} 
-               
-               
-            </div>
-       </section>
-   </article>
+                 {{/with}}
+                  {{/each}}
+                          <div class="space-top-detail1">
+                              <!-- <img src="img/cream.png" class="img-responsive"> -->
+                              <!-- <span class='zoom' id='ex1'> -->
+                                <img id="hoverZoom" class="img-responsive" src="{{getImgForProduct _id}}" alt="{{title}}"/>
+                                <!-- </span> -->
+                          </div>
+                          <div class="col-sm-12">
+                            <button class="btn_addtocard pull-left" id="addtocart">{{_ "ADD TO CART"}}</button>
+                            <h2 class="pull-right">{{selected_price}} تومان</h2>
+                          </div>
+                        </div>
+
+                        <div class="row">
+                         <div class="col-sm-12">
+                           <div class="well-deatail">
+                                <p class="text-center text-detail">{{{description}}}</p>
+                            </div>
+                         </div>
+                        </div>
+                    </div>
+                   </section>
+                   <section class="shadow_bottom">
+                    <div class="wrapper">
+                        <!-- <div class="row">
+                           <div class="pull-right">
+                               <img src="img/filter-img.png" class="img-responsive space-top-img1">
+                           </div>
+                           <div class="col-sm-12">
+                              <div class="col-md-6 pull-left space-top-detail2">
+                               <img src="img/sm-girl.png" class="img-responsive">
+                              </div>
+                               <div class="col-md-6 pull-left space-top-detail2">
+                                 <h4>Sarah</h4>
+                                 <p class="no-margin">07-20-2015</p>
+                                 <p class="no-margin">11:16</p>
+                              </div>
+                           </div>
+                        </div> -->
+                     {{#if currentUser}}
+                        <div class="col-sm-12">
+                          <div class="space-comment box">
+                             <textarea class="form-control" id="status" name="styled-textarea" onfocus="this.value=''; setbg('#ccc');" onblur="setbg('white')" rows="7">{{_"Write what you want ..."}}</textarea>
+                           </div>
+                           <button class="btn_register pull-right" id="posting">{{_ "SEND"}}</button>
+                        </div>
+                     {{/if}}
+                        <div class="clear-fix"></div>
+                          {{#each getReviews review filterReview removeFilter}}
+                        <div class="row">
+                           <div class="col-sm-12">
+                              <div class="col-sm-5 pull-left space-top-detail2">
+                               <img src="{{getImg currentUser.image}}" class="img-responsive center-block" style="width: 50%;">
+                               <!-- <img src="img/sm-girl.png" class="img-responsive"> -->
+                              </div>
+                               <div class="col-sm-5 pull-left space-top-detail2">
+                                 <h4>{{#with getprofile}}{{profile.firstname}} {{profile.lastname}}{{/with}}</h4>
+                                 <p class="no-margin">{{getDate date}}</p>
+                                 <p class="no-margin">{{getTime date}}</p>
+                              </div>
+                              <div class="col-sm-2 pull-right space-top-detail2">
+                               <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp;19</h3> 
+                              </div>
+                              <div class="col-sm-12">
+                                 <p class="pull-left space-top-detail3">{{comment}}</p>
+                                 <div class="pull-left border-detail">   
+                                 </div>
+                              </div>
+                           </div>  
+                        </div>
+                        {{/each}} 
+                        </div>
+                   </section>
+                </article>
+
 </template>
