--- a/public/css/custom_layout.css
+++ b/public/css/custom_layout.css
@@ -2,6 +2,9 @@
     outline: 0;
     outline-offset: -2px;
 }
+.nonelike{
+    display: none;
+}
 #a-sidebar {
     width: 60px;
     height: 30px;
@@ -12,20 +15,6 @@
     margin-right: 8px;
 }
 
-#menu-search::before {
-    background-size: 24px auto;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-color: #000;
-    background-image: url("../img/icons/search.png");
-    width: 50px;
-    height: 48px;
-    display: block;
-    position: absolute;
-    left: 0px;
-    content: "";
-    top: 5px;
-}
 
 #menu-search-input-text {
     width: 180px;
